# krti2021

./: README.md
catkin_ws_krti2020/src/KRTI2020/: CMakeLists.txt  CMakeListsPPPP.txt  packagePPP.xml
catkin_ws_krti2020/src/KRTI2020/config/: keeper1nr.txt  keeper1r.txt  robot1_calib_results.txt  robot1_calib_results2.txt  robot1_calib_results3.txt  robot1_calib_results4.txt  robot1_calib_results5.txt  robot1_calib_results7.txt  robot2_c1.txt  robot2_c2.txt  robot2_calib_results.txt
catkin_ws_krti2020/src/KRTI2020/launch/: addomni_hector.launch  amcl2.launch  checkerboard_amcl.launch  checkerboard_amcl_wheels.launch  checkerboard_localization.launch  checkerboard_localization_wheels.launch  checkerboard_mapping_rf2o.launch  checkerboard_rf2o_gmapping.launch  ekf_template.launch  krsbi_gmapping.launch  krsbi_gmapping_rf2o.launch  krsbi_navigation.launch  krsbi_slam.launch  omni_amcl.launch  omni_localization.launch  omni_localization_iseepee.launch  omni_mapping.launch  omni_mapping_checkerboard.launch  omni_mapping_hector.launch  omni_mapping_rf2o.launch  omni_rf2o_checkerboard.launch  omni_rf2o_wheels.launch  omni_scan_matcher.launch  omni_scan_matcher_checkerboard.launch  omni_to_pcl.launch  raspilaser.launch  rf2o_amcl.launch  rf2o_gmapping_omni.launch  rf2o_laser_odometry.launch  rf2o_navigation.launch  rf2o_omni_navigation.launch  robot2_amcl.launch  robot2_localization.launch  robot2_localization2.launch  scan_matcher.launch
catkin_ws_krti2020/src/KRTI2020/map/: lapangan.yaml
catkin_ws_krti2020/src/KRTI2020/rviz/: addomni_hector.rviz  cam2pcl.rviz  checkerboard2_krsbi_navigation.rviz  checkerboard_krsbi_navigation.rviz  krsbi2019omni.rviz  krsbi_navigation.rviz  omni_cam2pcl.rviz  rf2o.rviz
catkin_ws_krti2020/src/KRTI2020/scripts/: odometry_odom.py  odometry_odom_robot1.py
catkin_ws_krti2020/src/KRTI2020/src/: blob_tracker.cpp  livecam.cpp  new.cpp  qrpose_detection.cpp  usbcam  usbcam.py
(+34 files in other folders)
